--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 comm==0.1.4
-contourpy==1.2.0
+contourpy
 cvzone==1.6.1
 cycler==0.12.1
 debugpy
